app/styles/alert.less
.upf-alert {
  display: flex;
  flex-direction: row;
  flex: 1;
  overflow: hidden;
  border: 1px solid var(--color-border-default);
  border-radius: var(--border-radius-md);
  padding: var(--spacing-px-9);
  gap: var(--spacing-px-12);
  background-color: var(--color-gray-50);

  .text-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    gap: 3px;
    font-size: var(--font-size-sm);

    .title {
      .text-style-semibold;
    }

    .subtitle {
      a {
        color: var(--color-blue-600);
      }
    }
  }

  .upf-square-btn.upf-btn--default.upf-square-btn--sm {
    background-color: transparent;
    border: none;
  }

  &--success {
    border-color: var(--color-success-100);

    &.upf-alert--plain {
      background-color: var(--color-success-50);
    }

    .icon {
      color: var(--color-success-500);
    }

    .title,
    .subtitle {
      color: var(--color-success-900);
    }
  }

  &--error {
    border-color: var(--color-error-100);

    &.upf-alert--plain {
      background-color: var(--color-error-50);
    }

    .icon {
      color: var(--color-error-500);
    }

    .title,
    .subtitle {
      color: var(--color-error-900);
    }
  }

  &--warning {
    border-color: var(--color-warning-100);

    &.upf-alert--plain {
      background-color: var(--color-warning-50);
    }

    .icon {
      color: var(--color-warning-500);
    }

    .title,
    .subtitle {
      color: var(--color-warning-900);
    }
  }

  &--info {
    border-color: var(--color-blue-100);

    &.upf-alert--plain {
      background-color: var(--color-blue-50);
    }

    .icon {
      color: var(--color-blue-500);
    }

    .title,
    .subtitle {
      color: var(--color-blue-900);
    }
  }
}

